--- a/src/RoughCut.Web/Pages/Privacy.cshtml
+++ b/src/RoughCut.Web/Pages/Privacy.cshtml
@@ -1,9 +1,12 @@
-@page
+﻿@page
 @model PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
-
+<div class="row gx-4 gx-lg-5 justify-content-center">
+    <div class="col">
+        <h1>@ViewData["Title"]</h1>
+        <p>Use this page to detail your site's privacy policy.</p>
+    </div>
+</div>
