--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml.css
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml.css
@@ -1,4 +1,4 @@
-/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
@@ -46,4 +46,3 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
-
