--- a/src/RoughCut.Web/Pages/Index.cshtml
+++ b/src/RoughCut.Web/Pages/Index.cshtml
@@ -1,65 +1,39 @@
-﻿@page
+@page
 @model IndexModel
 @{
     ViewData["Title"] = "Acasă";
 }
 
-<div class="row gx-4 gx-lg-5 justify-content-center">
-    <div class="col-md-10 col-lg-8 col-xl-7">
-        <!-- Post preview-->
-        <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-            </a>
-            <p class="post-meta">
-                Postat de
-                <a href="#!">Start Bootstrap</a>
-                on September 24, 2022
-            </p>
+<section class="hero is-primary">
+        <div class="hero-body">
+            <div class="content has-text-centered">
+                <p>Latest article picture</p>
+                <p class="title">@Model.LatestArticle.Title</p>
+                <p class="subtitle">@Model.LatestArticle.Description</p>
+            </div>
         </div>
-        <!-- Divider-->
-        <hr class="my-4" />
-        <!-- Post preview-->
-        <div class="post-preview">
-            <a href="post.html"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
-            <p class="post-meta">
-                Postat de
-                <a href="#!">Start Bootstrap</a>
-                on September 18, 2022
-            </p>
+      </section>
+    <section class="section has-background-light">
+        <div class="container">
+            <div class="columns is-centered">
+                <div class="column is-two-thirds">
+                @foreach (var article in Model.Articles[1..])
+                {
+                    <div class="card mb-4">
+                        <div class="card-content">
+                            <div class="columns">
+                                <div class="column is-one-third">
+                                    Article picture
+                                </div>
+                                <div class="column">
+                                    <p class="title">@article.Title</p>
+                                    <p class="subtitle">@article.Description</p>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                }
+                </div>
+              </div>
         </div>
-        <!-- Divider-->
-        <hr class="my-4" />
-        <!-- Post preview-->
-        <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">Science has not yet mastered prophecy</h2>
-                <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
-            </a>
-            <p class="post-meta">
-                Postat de
-                <a href="#!">Start Bootstrap</a>
-                on August 24, 2022
-            </p>
-        </div>
-        <!-- Divider-->
-        <hr class="my-4" />
-        <!-- Post preview-->
-        <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">Failure is not an option</h2>
-                <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
-            </a>
-            <p class="post-meta">
-                Postat de
-                <a href="#!">Start Bootstrap</a>
-                on July 8, 2022
-            </p>
-        </div>
-        <!-- Divider-->
-        <hr class="my-4" />
-        <!-- Pager-->
-        <div class="d-flex justify-content-end mb-4"><a class="btn btn-dark text-uppercase" href="#!">Articole anterioare →</a></div>
-    </div>
-</div>
+    </section>
