--- a/src/RoughCut.Web/Pages/Shared/_BulmaLayout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_BulmaLayout.cshtml
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
-<html lang="ro">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>@ViewData["Title"] - Rough Cut</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    </head>
-    <body>
-        <section class="section">
-            <div class="container">
-                <h1 class="title">
-                    Hello, Bulma!
-                </h1>
-                <p class="subtitle">
-                    My first website with <strong>Bulma</strong>!
-                </p>
+<html lang="ro" class="has-navbar-fixed-top">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>@ViewData["Title"] - Rough Cut</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+</head>
+<body>
+    <nav class="navbar is-fixed-top is-primary" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="/">
+            Rough Cut
+          </a>
+
+          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+          <div class="navbar-start">
+            <a class="navbar-item">
+                Secțiune 1
+            </a>
+            <a class="navbar-item">
+                Secțiune 2
+            </a>
+            <a class="navbar-item">
+                Secțiune 3
+            </a>
             </div>
-        </section>
-    </body>
+          </div>
+
+        <div class="navbar-end">
+            <div class="navbar-item">
+              <input class="input" type="text" placeholder="Caută"/>
+            </div>
+          </div>
+    </nav>
+    @RenderBody()
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>&copy; Rough Cut 2022.</p>
+          <p>
+              Revista Facultății de Teatru și Film a Universității Babeș-Bolyai
+          </p>
+        </div>
+      </footer>
+</body>
 </html>
