--- a/src/RoughCut.Web/Pages/Shared/_BulmaLayout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_BulmaLayout.cshtml
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>@ViewData["Title"] - Rough Cut</title>
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- Bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 </head>
@@ -37,9 +40,16 @@
 
         <div class="navbar-end">
             <div class="navbar-item">
-              <input class="input" type="text" placeholder="Caută"/>
+                <div class="field">
+                    <p class="control has-icons-left">
+                        <input class="input" type="text" placeholder="Caută articole" />
+                        <span class="icon is-small is-left">
+                            <i class="bi bi-search"></i>
+                        </span>
+                    </p>
+                </div>
             </div>
-          </div>
+        </div>
     </nav>
     @RenderBody()
     <footer class="footer">
