Add mock logo; update home layout

--- a/src/RoughCut.Web/Pages/Shared/_BulmaLayout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_BulmaLayout.cshtml
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="~/assets/favicon.ico" />
 </head>
 <body>
     <nav class="navbar is-fixed-top is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
-            Rough Cut
+            <img src="~/assets/img/logoipsum.svg" height="28">
           </a>
 
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -25,15 +25,27 @@
         </div>
 
         <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start">
+          <div class="navbar-start is-uppercase has-text-weight-medium">
             <a class="navbar-item">
-                Secțiune 1
+                Interviu
             </a>
             <a class="navbar-item">
-                Secțiune 2
+                Cronică
             </a>
             <a class="navbar-item">
-                Secțiune 3
+                Flashback
+            </a>
+            <a class="navbar-item">
+                Carte de Film
+            </a>
+            <a class="navbar-item">
+                Seriale
+            </a>
+            <a class="navbar-item">
+                Divertisment
+            </a>
+            <a class="navbar-item">
+                Videoclipuri
             </a>
             </div>
           </div>
