--- a/src/RoughCut.Web/Pages/Index.cshtml
+++ b/src/RoughCut.Web/Pages/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Acasă";
 }
 
-<section class="hero is-primary">
+<section class="hero is-primary pt-4">
     <div class="hero-body">
         <div class="columns is-centered">
-            <div class="column is-three-fifths">
+            <div class="column is-three-fifths-desktop">
                 <div class="content has-text-centered">
                     <figure class="image">
                         <img src="@Model.LatestArticle.ImageUrl" />
@@ -22,7 +22,7 @@
 <section class="section has-background-light">
     <div class="container">
         <div class="columns is-centered">
-            <div class="column is-two-thirds">
+            <div class="column is-two-thirds-desktop">
                 @foreach (var article in Model.Articles[1..])
                 {
                     <div class="card mb-4">
