Add article and category pages

--- a/src/RoughCut.Web/Pages/Category.cshtml
+++ b/src/RoughCut.Web/Pages/Category.cshtml
@@ -1,7 +1,7 @@
-@page
-@model IndexModel
+@page "/categorii/exemplu"
+@model RoughCut.Web.Pages.CategoryModel
 @{
-    ViewData["Title"] = "Acasă";
+    ViewData["Title"] = @Model.Name;
 }
 
 <section class="hero is-primary pt-4">
@@ -9,6 +9,7 @@
         <div class="columns is-centered">
             <div class="column is-three-fifths-desktop">
                 <div class="content has-text-centered">
+                    <h1 class="is-uppercase">@Model.Name</h1>
                     <figure class="image">
                         <a asp-page="/Article">
                             <img src="@Model.LatestArticle.ImageUrl" alt="@Model.LatestArticle.Title" />
