--- a/src/RoughCut.Web/Pages/Index.cshtml
+++ b/src/RoughCut.Web/Pages/Index.cshtml
@@ -1,7 +1,8 @@
 @page
 @model IndexModel
 @{
-    ViewData["Title"] = "Acasă";
+    ViewData[ViewDataKey.Title] = "Acasă";
+    IFormatProvider format = new CultureInfo("ro-Ro");
 }
 
 <section class="hero is-primary pt-4">
@@ -28,7 +29,7 @@
 <section class="section has-background-light">
     <div class="container">
         <div class="columns is-centered">
-            <div class="column is-two-thirds-desktop">
+            <div class="column is-four-fifths-desktop">
                 @foreach (var article in Model.Articles[1..])
                 {
                     <div class="card mb-4">
@@ -48,6 +49,7 @@
                                         </a>
                                         </p>
                                     <p class="subtitle">@article.Description</p>
+                                    <p>De @article.Author.Name în @article.CreatedDate.ToString(format)</p>
                                 </div>
                             </div>
                         </div>
