--- a/src/RoughCut.Web/Pages/Error.cshtml
+++ b/src/RoughCut.Web/Pages/Error.cshtml
@@ -1,7 +1,7 @@
 @page
 @model ErrorModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData[ViewDataKey.Title] = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
