--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>@ViewData["Title"] - Rough Cut</title>
+    <title>@ViewData[ViewDataKey.Title] - Rough Cut</title>
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Bulma -->
@@ -66,7 +66,9 @@
     @RenderBody()
     <footer class="footer">
         <div class="content has-text-centered">
-            <p>Revista Facultății de Teatru și Film a Universității Babeș-Bolyai</p>
+            <p class="is-size-5">
+                Revista <a href="https://teatrufilm.ubbcluj.ro/">Facultății de Teatru și Film</a> a Universității Babeș-Bolyai
+            </p>
             <p>&copy; Rough Cut 2022.</p>
         </div>
     </footer>
