--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="~/css/rough-cut.css">
     <link rel="icon" type="image/x-icon" href="~/assets/favicon.ico" />
 </head>
 <body>
