Add date tag helper

--- a/src/RoughCut.Web/Pages/Article.cshtml
+++ b/src/RoughCut.Web/Pages/Article.cshtml
@@ -2,7 +2,6 @@
 @model RoughCut.Web.Pages.ArticleModel
 @{
     ViewData[ViewDataKey.Title] = Model.Title;
-    IFormatProvider format = new CultureInfo("ro-Ro");
 }
 
 <section class="hero is-primary pt-4">
@@ -14,7 +13,7 @@
                         <img src="@Model.ImageUrl" />
                     </figure>
                     <p class="title">@Model.Title</p>
-                    <p class="subtitle">De @Model.Author.Name în @Model.CreatedDate.ToString(format)</p>
+                    <p class="subtitle">De @Model.Author.Name în <date on="Model.CreatedDate"></date></p>
                 </div>
             </div>
         </div>
