--- a/src/RoughCut.Web/Pages/Author.cshtml
+++ b/src/RoughCut.Web/Pages/Author.cshtml
@@ -3,7 +3,6 @@
 @using RoughCut.Web.Models
 @{
     ViewData[ViewDataKey.Title] = "Author";
-    IFormatProvider format = new CultureInfo("ro-Ro");
 }
 
 <section class="hero is-primary pt-4">
@@ -46,7 +45,7 @@
                                         </a>
                                     </p>
                                     <p class="subtitle">@article.Description</p>
-                                    <p>În @article.CreatedDate.ToString(format)</p>
+                                    <p>În <date on="article.CreatedDate"></date></p>
                                 </div>
                             </div>
                         </div>
