--- a/src/RoughCut.Web/Pages/Category.cshtml
+++ b/src/RoughCut.Web/Pages/Category.cshtml
@@ -2,7 +2,6 @@
 @model RoughCut.Web.Pages.CategoryPageModel
 @{
     ViewData[ViewDataKey.Title] = @Model.Name;
-    IFormatProvider format = new CultureInfo("ro-Ro");
 }
 
 <section class="hero is-primary pt-4">
@@ -50,7 +49,7 @@
                                         </a>
                                         </p>
                                     <p class="subtitle">@article.Description</p>
-                                    <p>De @article.Author.Name în @article.CreatedDate.ToString(format)</p>
+                                    <p>De @article.Author.Name în <date on="article.CreatedDate"></date></p>
                                 </div>
                             </div>
                         </div>
