--- a/src/RoughCut.Web/Pages/_ViewImports.cshtml
+++ b/src/RoughCut.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-@using System.Globalization;
 @using RoughCut.Web
 @namespace RoughCut.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, RoughCut.Web
