Update logo and favicon

--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
     <!-- Bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="~/css/rough-cut.css">
-    <link rel="icon" type="image/x-icon" href="~/assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="~/favicon.png" />
 </head>
 <body>
     <nav class="navbar is-fixed-top is-spaced is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
-            <img src="~/assets/img/logoipsum.svg">
+            <img src="~/logo-dark.svg">
           </a>
 
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
