--- a/src/RoughCut.Web/Pages/Article.cshtml
+++ b/src/RoughCut.Web/Pages/Article.cshtml
@@ -25,7 +25,7 @@
 <section class="section has-background-light">
     <div class="columns is-centered">
         <div class="column is-three-fifths-desktop">
-            <div class="content has-text-justified">
+            <div class="content has-text-justified is-size-5">
                 @Html.Raw(Model.Body)
             </div>
         </div>
