--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,15 +1,24 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
+// Fonts
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-// Brand colors
-$rc-beige: #d0d1cd;
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+// Rough Cut brand colors
 $rc-dark: #211e1e;
 $rc-red: #bd1c2b;
 
-// Bulma global variables
-$family-primary: "EB Garamond", serif;
+// Bulma colors
 $primary: $rc-dark;
+$link: $rc-red;
+
+// Bulma navbar
+$navbar-item-img-max-height: 3rem;
+
+// Bulma typography
+$family-primary: "Roboto", sans-serif;
+$family-secondary: "EB Garamond", serif;
 
 // Import Bulma
 @import "../node_modules/bulma/bulma.sass";
