--- a/src/RoughCut.Web/Pages/Article.cshtml
+++ b/src/RoughCut.Web/Pages/Article.cshtml
@@ -15,14 +15,18 @@
                         <img src="@Model.ImageUrl" />
                     </figure>
                     <p class="subtitle is-uppercase is-underlined">
-                        <a asp-page="/Category" asp-route-categoryAlias="@Model.Category.Alias">@Model.Category.Name</a>
+                        @for (int i = 0; i < Model.Categories.Count - 1; i++)
+                        {
+                        <a asp-page="/Category" asp-route-categoryAlias="@Model.Categories[i].Alias">@Model.Categories[i].Name</a> <span>/</span>
+                        }
+                        <a asp-page="/Category" asp-route-categoryAlias="@Model.Categories[Model.Categories.Count -1].Alias">@Model.Categories[Model.Categories.Count - 1].Name</a>
                     </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<section class="section has-background-light">
+<section class="section">
     <div class="columns is-centered">
         <div class="column is-three-fifths-desktop">
             <div class="content has-text-justified is-size-5">
