Add About page with authors (#6)

--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
           </div>
 
         <div class="navbar-end">
+            <a class="navbar-item is-uppercase" asp-page="/About">
+                Despre noi
+            </a>
             <div class="navbar-item">
                 <div class="field">
                     <p class="control has-icons-left">
