--- a/src/RoughCut.Web/Pages/Category.cshtml
+++ b/src/RoughCut.Web/Pages/Category.cshtml
@@ -1,4 +1,4 @@
-@page "/categorii/{categoryAlias}"
+@page "/categorii/{alias}"
 @model RoughCut.Web.Pages.CategoryPageModel
 @{
     ViewData[ViewDataKey.Title] = @Model.Name;
