--- a/src/RoughCut.Web/Pages/About.cshtml
+++ b/src/RoughCut.Web/Pages/About.cshtml
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="column">
                                     <p class="title">
-                                        <a asp-page="/Article">
+                                        <a asp-page="/Author" asp-route-authorId="@author.Id">
                                         @author.Name
                                         </a>
                                         </p>
