--- a/src/RoughCut.Web/Pages/_ViewImports.cshtml
+++ b/src/RoughCut.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using RoughCut.Web
+@using RoughCut.Web.Models
 @namespace RoughCut.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RoughCut.Web
