Use articles from CMS

--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         <span class="icon is-small is-left">
                             <i class="bi bi-search"></i>
                         </span>
-                        <input class="input" type="text" placeholder="Caută" />
+                        <input class="input" type="text" placeholder="Caută" disabled />
                     </p>
                 </div>
             </div>
