Display article categories

--- a/src/RoughCut.Web/Pages/Author.cshtml
+++ b/src/RoughCut.Web/Pages/Author.cshtml
@@ -48,7 +48,7 @@
                                         </a>
                                     </p>
                                     <p class="subtitle">@article.Description</p>
-                                    <p>În <date on="article.CreatedDate"></date></p>
+                                    <p>În <date on="article.PublishedDate"></date></p>
                                 </div>
                             </div>
                         </div>
