--- a/src/RoughCut.Web/Pages/Article.cshtml
+++ b/src/RoughCut.Web/Pages/Article.cshtml
@@ -16,12 +16,12 @@
                     </figure>
                     @if (Model.Categories.Any())
                     {
-                        <p class="subtitle is-uppercase is-underlined">
+                        <p class="subtitle is-uppercase">
                             @for (int i = 0; i < Model.Categories.Count - 1; i++)
                             {
-                                <a asp-page="/Category" asp-route-alias="@Model.Categories[i].Alias">@Model.Categories[i].Name</a> <span>/</span>
+                                <a asp-page="/Category" asp-route-alias="@Model.Categories[i].Alias" class="is-underlined">@Model.Categories[i].Name</a> <span>/</span>
                             }
-                            <a asp-page="/Category" asp-route-alias="@Model.Categories[Model.Categories.Count -1].Alias">@Model.Categories[Model.Categories.Count - 1].Name</a>
+                            <a asp-page="/Category" asp-route-alias="@Model.Categories[Model.Categories.Count -1].Alias" class="is-underlined">@Model.Categories[Model.Categories.Count - 1].Name</a>
                         </p>
                     }
                 </div>
