--- a/src/RoughCut.Web/Pages/Category.cshtml
+++ b/src/RoughCut.Web/Pages/Category.cshtml
@@ -49,7 +49,7 @@
                                         </a>
                                         </p>
                                     <p class="subtitle">@article.Description</p>
-                                    <p>De @article.Author.Title în <date on="article.CreatedDate"></date></p>
+                                    <p>De @article.Author.Title în <date on="article.PublishedDate"></date></p>
                                 </div>
                             </div>
                         </div>
