--- a/src/RoughCut.Web/Pages/Category.cshtml
+++ b/src/RoughCut.Web/Pages/Category.cshtml
@@ -9,7 +9,7 @@
         <div class="columns is-centered">
             <div class="column is-three-fifths-desktop">
                 <div class="content has-text-centered">
-                    <h1 class="is-uppercase">@Model.Name</h1>
+                    <h1 class="is-uppercase has-text-white">@Model.Name</h1>
                     <figure class="image">
                         <a asp-page="/Article">
                             <img src="@Model.LatestArticle.ImageUrl" alt="@Model.LatestArticle.Title" />
@@ -21,6 +21,7 @@
                         </a>
                     </p>
                     <p class="subtitle">@Model.LatestArticle.Description</p>
+                    <p>De <a class="is-underlined" asp-page="/Author" asp-route-authorId="@Model.LatestArticle.Author.Alias">@Model.LatestArticle.Author.Title</a>, în <date on="Model.LatestArticle.PublishedDate"></date></p>
                 </div>
             </div>
         </div>
@@ -49,7 +50,7 @@
                                         </a>
                                         </p>
                                     <p class="subtitle">@article.Description</p>
-                                    <p>De @article.Author.Title în <date on="article.PublishedDate"></date></p>
+                                    <p>De <a class="is-underlined" asp-page="/Author" asp-route-authorId="@article.Author.Alias">@article.Author.Title</a> în <date on="article.PublishedDate"></date></p>
                                 </div>
                             </div>
                         </div>
