--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>@ViewData[ViewDataKey.Title] - Rough Cut</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="stylesheet" href="~/css/styles.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.png" />
 </head>
 <body>
