Update NuGet packages and copyright notice

--- a/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
+++ b/src/RoughCut.Web/Pages/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             <p class="is-size-5">
                 Revistă suținută de <a href="https://teatrufilm.ubbcluj.ro/">Facultatea de Teatru și Film</a> a Universității Babeș-Bolyai
             </p>
-            <p>&copy; Rough Cut 2022.</p>
+            <p>&copy; Rough Cut 2022 - @DateTime.Now.Year.</p>
         </div>
     </footer>
 </body>
